[package]
name = "snake-piston"
version = "0.0.1"
authors = ["Alexandru Cojocaru <xojoc@gmx.com>"]

[[bin]]
name = "snake"
path = "snake.rs"

[dependencies]
piston = "0.37.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-opengl_graphics = "0.53.0"
piston_window = "0.81.0"
rand = "0.3"